--- a/API ChatGPT.ipynb
+++ b/API ChatGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "d17854a9",
    "metadata": {},
    "outputs": [],
@@ -11,14 +11,14 @@
     "from openai import OpenAI\n",
     "\n",
     "class ChaptersSummaryAI:\n",
-    "    \"\"\"A bird with a flight speed exceeding that of an unladen swallow.\n",
+    "    \"\"\"Make summary for book by chapters with ChatGPT API.\n",
     "\n",
     "    Attributes:\n",
     "        book_file        Path to book of pdf format (e.g. \"book.pdf\")\n",
-    "        chapters_pages   Pages of chapters (e.g. [(1,7),(8,13),(14,18)])\n",
-    "        key              OpenAI Key for access to ChatGPT API (requires positive balance on API usage)\n",
+    "        chapters_pages   Pages of chapters [(start_page, end_page)] (e.g. [(1,7),(8,13),(14,18)])\n",
+    "        key              OpenAI Key for access to ChatGPT API (requires positive balance for API usage)\n",
     "    \"\"\"\n",
-    "    def __init__(self, book_file : str, chapters_pages : callable, key : str):\n",
+    "    def __init__(self, book_file : str, chapters_pages, key : str):\n",
     "        self.book_file=book_file\n",
     "        self.chapters_pages=chapters_pages\n",
     "        self.key=key\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "072ec75b",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "3f9c92aa",
    "metadata": {},
    "outputs": [],
@@ -82,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "83a6a7ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['In the first chapter of \"Animal Farm\" by George Orwell, the animals on Manor Farm gather to hear a wise pig named Old Major deliver a speech about the oppression they face at the hands of humans. Old Major encourages the animals to rebel against their human masters, emphasizing the need for unity and equality among all animals. He shares a dream he had about a future where animals live free from human tyranny. The chapter ends with the animals singing a revolutionary song called \"Beasts of England\" before Mr. Jones, the farm owner, interrupts their gathering with a gunshot.',\n",
-       " 'In Chapter 2 of \"Animal Farm\" by George Orwell, the animals successfully overthrow Mr. Jones and take control of the farm. They destroy all reminders of human oppression and establish their own rules, including the Seven Commandments of Animalism. The animals then begin the work of harvesting the hay, with the pigs taking on leadership roles in organizing the tasks.',\n",
-       " 'In the third chapter of Animal Farm, the animals work hard to harvest the hay, with the pigs directing and supervising the work. The harvest is a great success, and the animals experience a newfound happiness and sense of ownership over their labor. The pigs take on leadership roles and organize committees for various tasks. The animals also engage in literacy classes, with the pigs and some other animals becoming proficient readers. Napoleon takes responsibility for educating the young puppies, and the pigs begin to consume the milk and apples, justifying it by claiming it is necessary for their health and essential to the management of the farm.']"
+       "['In the first chapter of \"Animal Farm\" by George Orwell, the animals on Manor Farm gather in the barn to hear Old Major, a wise and respected boar, share a dream he had about a future without human oppression. Old Major calls for a rebellion against humans, emphasizing the lack of freedom and happiness endured by the animals under human rule. He teaches them the song \"Beasts of England\" and inspires them to unite against their common enemy, man. The chapter ends with a powerful sense of hope and excitement among the animals.',\n",
+       " 'In the second chapter of \"Animal Farm\" by George Orwell, the animals successfully overthrow Mr. Jones and take control of the farm. They celebrate their newfound freedom by destroying all reminders of the humans\\' mistreatment and renaming the farm \"Animal Farm.\" The pigs, Snowball and Napoleon, then establish the Seven Commandments of Animalism, which all animals must follow. The chapter ends with the animals beginning the hay harvest and the mysterious disappearance of the milk that was produced by the cows.',\n",
+       " 'In Chapter III of \"Animal Farm,\" the animals work hard to harvest the hay and achieve great success. The pigs, with their superior knowledge, lead and supervise the other animals. Despite challenges, such as using tools designed for humans, the animals work together efficiently. Sundays are devoted to meetings and resolutions, and the pigs hoist a flag symbolizing their future Republic of Animals. Snowball organizes various committees, while Napoleon takes charge of educating puppies. The milk and apples are reserved for the pigs, with Squealer justifying this by claiming it is necessary for their health and the well-being of the farm.']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
