--- a/Stability_Generator_API/script1.ipynb
+++ b/Stability_Generator_API/script1.ipynb
@@ -5,7 +5,6 @@
    "execution_count": 1,
    "id": "33746ceaabd44992",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-03-09T13:10:14.295341Z",
      "start_time": "2024-03-09T13:10:14.230523Z"
@@ -24,34 +23,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5233619eb9a35811",
+   "metadata": {},
    "source": [
     "## Image generation"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5233619eb9a35811"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# Load environment variables from .env file\n",
-    "load_dotenv()\n",
-    "api_key = os.getenv(\"API_KEY\")"
-   ],
+   "execution_count": 6,
+   "id": "31d922f8a04b57df",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-03-09T13:10:18.364281Z",
      "start_time": "2024-03-09T13:10:18.360576Z"
     }
    },
-   "id": "31d922f8a04b57df",
-   "execution_count": 2
+   "outputs": [],
+   "source": [
+    "# Load environment variables from .env file\n",
+    "#load_dotenv()\n",
+    "#api_key = os.getenv(\"API_KEY\")"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5f28d600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_key='sk-sCTLqlnzDxEQJrHmtT3GTNncfLYX5n9njuL04oWKbav0PUqR'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3ef87a5c98dd41c4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-09T13:10:21.989187Z",
+     "start_time": "2024-03-09T13:10:21.986804Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Combined usage:\n",
@@ -60,101 +74,107 @@
     "    {\"text\": \"blurry, bad\", \"weight\": -1},]\n",
     "output_directory = \"Images/\"\n",
     "book_name = \"Harry\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-09T13:10:21.989187Z",
-     "start_time": "2024-03-09T13:10:21.986804Z"
-    }
-   },
-   "id": "3ef87a5c98dd41c4",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "generate_image_from_text(api_key, text_prompts, output_directory, book_name)"
-   ],
+   "execution_count": 4,
+   "id": "33925e91884071dd",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-03-09T13:10:34.640799Z",
      "start_time": "2024-03-09T13:10:26.332085Z"
     }
    },
-   "id": "33925e91884071dd",
-   "execution_count": 4
+   "outputs": [],
+   "source": [
+    "generate_image_from_text(api_key, text_prompts, output_directory, book_name)"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "resize_image(\"Images/Harry_2831275650.png\")"
-   ],
+   "execution_count": 5,
+   "id": "787ee89d0fa147b4",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-03-09T13:11:28.336824Z",
      "start_time": "2024-03-09T13:11:27.740769Z"
     }
    },
-   "id": "787ee89d0fa147b4",
-   "execution_count": 5
+   "outputs": [],
+   "source": [
+    "resize_image(\"Images/Harry_2831275650.png\")"
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation ID: adf3fc95fe8d84638afc5b4b6fea88a8fe7799f7bc171c7d20b8c8566be1d787\n",
-      "Generation in-progress, try again in 10 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "generate_and_download_video(api_key, \"Images/Harry_2831275650.png\")"
-   ],
+   "execution_count": 6,
+   "id": "5eb2aa8b0548d1f0",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-03-09T13:36:26.360764Z",
      "start_time": "2024-03-09T13:36:20.234532Z"
     }
    },
-   "id": "5eb2aa8b0548d1f0",
-   "execution_count": 10
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "++++++++++++++++++++++++++++++"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "bb9f9847b0fce36e"
-  },
-  {
-   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation ID: 2d4f64548a3c4d9fe05138d9569acda11ed04b0d6b07588af74f6c7dff3a51f6\n"
+      "Generation ID: 76da649a42dfd415ef58d18c6688e10cd41233abcf5feff2f40f4f07c86542ca\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation in-progress, try again in 10 seconds.\n",
+      "Generation complete!\n"
      ]
     }
    ],
    "source": [
-    "api_key = \"sk-bkuIqt0pQzG17G7H3q8phhkvYLBkUK3S7z4vqMfLtCdEjkDJ\"\n",
+    "generate_and_download_video(api_key, \"Images/Harry_2831275650.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb9f9847b0fce36e",
+   "metadata": {},
+   "source": [
+    "++++++++++++++++++++++++++++++"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "initial_id",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-08T19:09:56.597826Z",
+     "start_time": "2024-03-08T19:09:51.852565Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation ID: 1d61aa10bad4ebdc820fe1aecac5a24068661aaf3e894d394e3bf8b693625609\n"
+     ]
+    }
+   ],
+   "source": [
+    "#api_key = \"sk-bkuIqt0pQzG17G7H3q8phhkvYLBkUK3S7z4vqMfLtCdEjkDJ\"\n",
     "response = requests.post(\n",
     "    f\"https://api.stability.ai/v2alpha/generation/image-to-video\",\n",
     "    headers={\"authorization\": f\"Bearer {api_key} \"},\n",
-    "    files={\"image\": open(\"./animal_farm.jpeg\", \"rb\")},\n",
+    "    #files={\"image\": open(\"./animal_farm.jpeg\", \"rb\")},\n",
+    "    files={\"image\": open(\"Images/Harry_2831275650.png\", \"rb\")},\n",
     "    data={\n",
     "        \"seed\": 0,\n",
     "        \"cfg_scale\": 1.8,\n",
@@ -164,28 +184,19 @@
     "\n",
     "generation_id = response.json().get('id')\n",
     "print(\"Generation ID:\", response.json().get('id'))"
-   ],
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-03-08T19:09:56.597826Z",
-     "start_time": "2024-03-08T19:09:51.852565Z"
-    }
-   },
-   "id": "initial_id",
-   "execution_count": 10
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation complete!\n"
-     ]
+   "execution_count": null,
+   "id": "2836842feea3891a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-08T19:11:08.338684Z",
+     "start_time": "2024-03-08T19:11:04.907763Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "response = requests.request(\n",
     "    \"GET\",\n",
@@ -204,19 +215,13 @@
     "        file.write(response.content)\n",
     "else:\n",
     "    raise Exception(str(response.json()))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-08T19:11:08.338684Z",
-     "start_time": "2024-03-08T19:11:04.907763Z"
-    }
-   },
-   "id": "2836842feea3891a",
-   "execution_count": 13
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "845e440adad2ac17",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_video(api_key, image_path):\n",
@@ -233,40 +238,34 @@
     "    \n",
     "generation_id = response.json().get('id')\n",
     "print(\"Generation ID:\", response.json().get('id'))"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "845e440adad2ac17"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "cf52e50bcb9690ef",
+   "metadata": {},
    "source": [
     "Combined function"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "cf52e50bcb9690ef"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
